@@ -3,10 +3,9 @@ package com.moyz.adi.common.interfaces;
 import com.moyz.adi.common.entity.AiImage;
 import com.moyz.adi.common.entity.AiModel;
 import com.moyz.adi.common.entity.User;
-import com.moyz.adi.common.enums.ErrorEnum;
-import com.moyz.adi.common.exception.BaseException;
 import com.moyz.adi.common.util.JsonUtil;
 import com.moyz.adi.common.util.LocalCache;
+import com.moyz.adi.common.vo.ImageModelBuilderProperties;
 import dev.langchain4j.data.image.Image;
 import dev.langchain4j.model.image.ImageModel;
 import dev.langchain4j.model.output.Response;
@@ -16,9 +15,6 @@ import org.springframework.beans.factory.annotation.Value;
 import java.net.Proxy;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static com.moyz.adi.common.cosntant.AdiConstant.OPENAI_CREATE_IMAGE_SIZES;
 
 @Slf4j
 public abstract class AbstractImageModelService<T> {
@@ -40,22 +36,22 @@ public abstract class AbstractImageModelService<T> {
 
     protected ImageModel imageModel;
 
-    public AbstractImageModelService(AiModel aiModel, String settingName, Class<T> clazz) {
+    protected AbstractImageModelService(AiModel aiModel, String settingName, Class<T> clazz) {
         this.aiModel = aiModel;
         String st = LocalCache.CONFIGS.get(settingName);
         setting = JsonUtil.fromJson(st, clazz);
     }
 
-    public AbstractImageModelService setProxy(Proxy proxy) {
+    public AbstractImageModelService<T> setProxy(Proxy proxy) {
         this.proxy = proxy;
         return this;
     }
 
-    public ImageModel getImageModel(User user, String size) {
+    public ImageModel getImageModel(User user, ImageModelBuilderProperties builderProperties) {
         if (null != imageModel) {
             return imageModel;
         }
-        imageModel = buildImageModel(user, size);
+        imageModel = buildImageModel(user, builderProperties);
         return imageModel;
     }
 
@@ -66,28 +62,40 @@ public abstract class AbstractImageModelService<T> {
      */
     public abstract boolean isEnabled();
 
-    protected abstract ImageModel buildImageModel(User user, String size);
+    protected abstract ImageModel buildImageModel(User user, ImageModelBuilderProperties builderProperties);
 
-    public List<String> createImage(User user, AiImage aiImage) {
-        if (aiImage.getGenerateNumber() < 1 || aiImage.getGenerateNumber() > 10) {
-            throw new BaseException(ErrorEnum.A_IMAGE_NUMBER_ERROR);
-        }
-        if (!OPENAI_CREATE_IMAGE_SIZES.contains(aiImage.getGenerateSize())) {
-            throw new BaseException(ErrorEnum.A_IMAGE_SIZE_ERROR);
-        }
-        ImageModel imageModel = getImageModel(user, aiImage.getGenerateSize());
+    public List<String> generateImage(User user, AiImage aiImage) {
+        ImageModelBuilderProperties builderProperties = ImageModelBuilderProperties.builder()
+                .size(aiImage.getGenerateSize())
+                .quality(aiImage.getGenerateQuality())
+                .build();
+        ImageModel curImageModel = getImageModel(user, builderProperties);
         try {
-            Response<List<Image>> response = imageModel.generate(aiImage.getPrompt(), aiImage.getGenerateNumber());
+            Response<List<Image>> response = curImageModel.generate(aiImage.getPrompt(), aiImage.getGenerateNumber());
             log.info("createImage response:{}", response);
-            return response.content().stream().map(item -> item.url().toString()).collect(Collectors.toList());
+            return response.content().stream().map(item -> item.url().toString()).toList();
         } catch (Exception e) {
             log.error("create image error", e);
         }
         return Collections.emptyList();
     }
 
+    /**
+     * DALL·E 2 only
+     *
+     * @param user
+     * @param aiImage
+     * @return
+     */
     public abstract List<String> editImage(User user, AiImage aiImage);
 
+    /**
+     * DALL·E 2 only
+     *
+     * @param user
+     * @param aiImage
+     * @return
+     */
     public abstract List<String> createImageVariation(User user, AiImage aiImage);
 
     public AiModel getAiModel() {
